--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,15 +274,17 @@ body {
 }
   
 .text-tabcontainer {
-	padding: 50px 0px 50px;
+	max-width: 600px;
+	padding: 20px 0px 20px;
 	align-items: center;
 	margin: 10px;
 }
 
 .noimagetext-tabcontainer {
-	padding: 50px;
+	padding: 30px;
 	align-items: center;
 	margin: 10px;
+	max-width: 600px;
 }
 
 .vaccine{
@@ -299,7 +301,7 @@ body {
 	max-height: 318px;
 }
   
-@media (min-width: 1000px) {
+@media (min-width: 1300px) {
 	.tabcontainer {
 		flex-direction: row;
 		align-items: center;
