--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -506,7 +506,10 @@ a:visited {
 
 @media (max-width: 800px) {
 	.tabcontainer-box {
+		background: white;
 		margin: 10px;
+		border-radius: 10px;
+		box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 	}
 	.tabcontainer {
 		padding: 0px;
