--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,6 +104,25 @@ a:visited {
 		font-weight: bold;
 	}
 }
+@media (max-width: 480px) {
+	.navbar-header a {
+		color: rgb(0, 0, 0);
+		text-decoration: none;
+		padding: 2px 4px;
+		font-size: 12px;
+		text-align: center;
+		font-weight: bold;
+	}
+	  
+	.navbar-right a {
+		color: rgb(0, 0, 0);
+		text-decoration: none;
+		padding: 2px 4px;
+		font-size: 12px;
+		text-align: center;
+		font-weight: bold;
+	}
+}
 
 /* Full screen background */
 .fullscreen-bg {
